--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
       >
         <div class="content">
-          <h1>Chen Huang</h1>
+          <h1>Chen Huang 黄晨</h1>
           <p class="major">
             👋 Hi, I’m Chen, a physics major student at Imperial College London.
           </p>
