--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <p class="major">
-            👋 Hi, I’m Chen, a physics major student at Imperial College London.
+            👋 Hi, I’m Chen, a student in physics at Imperial College London.
+          </p>
+          <p class="major">
+            My given name is "晨" (Chen), which means "morning" in Chinese. I've
+            always been a morning person, drawn to the fresh air and peaceful
+            start of each day. Interestingly, "Chen" also sounds like "Cheng",
+            which is the Chinese pronunciation for "orange" (橙). Because of
+            this, my friends affectionately call me "橙子" (Chengzi) 🍊.
           </p>
           <p class="major">
             I am passionate about exploring the fascinating realms of Quantum
