--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <p class="major">
-            👋 Hi, I’m Chen, a student in physics at Imperial College London.
+            👋 Hi, I'm Chen, a physics student at Imperial College London. I
+            focus on experimental work with semiconductor qubits under the
+            guidance of Dr. John Michniewicz. Simultaneously, I'm a remote
+            intern at the Beijing Academy of Quantum Information Science
+            (BAQIS), where I work with Dr. Jingbo Wang on Rydberg atom quantum
+            computing and compilation.
+          </p>
+          <p class="major">
+            Theoretical research brings me the joy of creating new ideas, while
+            experimental work excites me as I witness "physics happening in the
+            lab". I am deeply passionate about both aspects of my research and
+            enjoy the unique challenges and rewards each offers.
           </p>
           <p class="major">
             My given name is "晨" (Chen), which means "morning" in Chinese. I've
@@ -38,11 +49,20 @@
           </p>
           <p class="major">
             I am passionate about exploring the fascinating realms of Quantum
-            Computing and Quantum Information. My academic journey has equipped
-            me with a solid foundation in physics, and I am enthusiastic about
-            applying this knowledge to cutting-edge research in quantum
-            technologie.
+            Computing and Quantum Information. Outside of academics, I enjoy
+            photography, traveling, reading, app development, and learning new
+            things. I’m also a big fan of the Chinese singer and dancer XIN Liu,
+            whose artistry inspires me.
           </p>
+          <p class="major">
+            I am currently seeking a PhD position in Quantum Computing and am
+            always on the lookout for new opportunities to expand my knowledge
+            and skills. Whether through collaborative projects, internships, or
+            further academic research, I'm eager to connect with like-minded
+            individuals and organizations. If you're interested in my research
+            or potential collaboration, please feel free to reach out! 📧
+          </p>
+
           <ul class="actions stacked">
             <li>
               <a href="#first" class="button big wide smooth-scroll-middle"
