--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         id="first"
       >
         <div class="content">
-          <h2>Magna etiam feugiat</h2>
+          <h2>Rydberg atom computing and compilation</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id
             ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis
