--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <p class="major">
-            👋 Hi, I'm Chen, a physics student at Imperial College London. I
-            focus on experimental work with semiconductor qubits under the
+            👋 Hi, I'm Chen, a physics student at **Imperial College London**. I
+            focus on experimental work with **semiconductor qubits** under the
             guidance of Dr. John Michniewicz. Simultaneously, I'm a remote
-            intern at the Beijing Academy of Quantum Information Science
-            (BAQIS), where I work with Dr. Jingbo Wang on Rydberg atom quantum
-            computing and compilation.
+            intern at the **Beijing Academy of Quantum Information Science
+            (BAQIS)**, where I work with Dr. Jingbo Wang on **Rydberg atom
+            quantum computing and compilation**.
           </p>
           <p class="major">
             Theoretical research brings me the joy of creating new ideas, while
@@ -55,12 +55,13 @@
             whose artistry inspires me.
           </p>
           <p class="major">
-            I am currently seeking a PhD position in Quantum Computing and am
-            always on the lookout for new opportunities to expand my knowledge
-            and skills. Whether through collaborative projects, internships, or
-            further academic research, I'm eager to connect with like-minded
-            individuals and organizations. If you're interested in my research
-            or potential collaboration, please feel free to reach out! 📧
+            I am currently seeking a PhD position in **Quantum Computing** and
+            am always on the lookout for new opportunities to expand my
+            knowledge and skills. Whether through collaborative projects,
+            internships, or further academic research, I'm eager to connect with
+            like-minded individuals and organizations. If you're interested in
+            my research or potential collaboration, please feel free to reach
+            out! 📧
           </p>
 
           <ul class="actions stacked">
