--- a/index.html
+++ b/index.html
@@ -157,15 +157,12 @@
         <!-- Gallery -->
         <div class="gallery style2 medium lightbox onscroll-fade-in">
           <article>
-            <a href="images/gallery/fulls/01.jpg" class="image">
-              <img src="images/gallery/thumbs/01.jpg" alt="" />
+            <a href="images/gallery/fulls/white_cliff.jpg" class="image">
+              <img src="images/gallery/fulls/white_cliff.jpg" alt="" />
             </a>
             <div class="caption">
-              <h3>Ipsum Dolor</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
+              <h3>White Cliff</h3>
+              <p>Time</p>
               <ul class="actions fixed">
                 <li><span class="button small">Details</span></li>
               </ul>
