--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- One -->
-      <section
-        class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
-      >
+      <section class="banner style1 content-align-center">
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <p class="major">
