--- a/index.html
+++ b/index.html
@@ -507,12 +507,16 @@
               >
             </li>
             <li>
-              <a href="#" class="icon brands style2 fa-linkedin-in"
+              <a
+                href="https://www.linkedin.com/in/chen-huang-820x/"
+                class="icon brands style2 fa-linkedin-in"
                 ><span class="label">LinkedIn</span></a
               >
             </li>
             <li>
-              <a href="#" class="icon style2 fa-envelope"
+              <a
+                href="mailto:chen.huang23@imperial.ac.uk"
+                class="icon style2 fa-envelope"
                 ><span class="label">Email</span></a
               >
             </li>
