--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <p class="major">
-            👋 Hi, I'm Chen, a physics student at **Imperial College London**. I
-            focus on experimental work with **semiconductor qubits** under the
-            guidance of Dr. John Michniewicz. Simultaneously, I'm a remote
-            intern at the **Beijing Academy of Quantum Information Science
-            (BAQIS)**, where I work with Dr. Jingbo Wang on **Rydberg atom
-            quantum computing and compilation**.
+            👋 Hi, I'm Chen, a physics student at
+            <b>Imperial College London</b>. I focus on experimental work with
+            <b>semiconductor qubits</b> under the guidance of Dr. John
+            Michniewicz. Simultaneously, I'm a remote intern at the
+            <b>Beijing Academy of Quantum Information Science (BAQIS)</b>, where
+            I work with Dr. Jingbo Wang on
+            <b>Rydberg atom quantum computing and compilation</b>.
           </p>
           <p class="major">
             Theoretical research brings me the joy of creating new ideas, while
