--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <head>
     <title>Chen's Physics World</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="images/icon.png" type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
