--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             whose artistry inspires me.
           </p>
           <p class="major">
-            I am currently seeking a PhD position in **Quantum Computing** and
+            I am currently seeking a PhD position in <b>Quantum Computing</b> and
             am always on the lookout for new opportunities to expand my
             knowledge and skills. Whether through collaborative projects,
             internships, or further academic research, I'm eager to connect with
