--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             whose artistry inspires me.
           </p>
           <p class="major">
-            I am currently seeking a PhD position in <b>Quantum Computing</b> and
-            am always on the lookout for new opportunities to expand my
-            knowledge and skills. Whether through collaborative projects,
-            internships, or further academic research, I'm eager to connect with
-            like-minded individuals and organizations. If you're interested in
-            my research or potential collaboration, please feel free to reach
-            out! 📧
+            I am currently seeking a PhD position in
+            <b>Quantum Computing</b> and am always on the lookout for new
+            opportunities to expand my knowledge and skills. Whether through
+            collaborative projects, internships, or further academic research,
+            I'm eager to connect with like-minded individuals and organizations.
+            If you're interested in my research or potential collaboration,
+            please feel free to reach out! 📧
           </p>
 
           <ul class="actions stacked">
@@ -154,8 +154,8 @@
         <!-- Gallery -->
         <div class="gallery style2 medium lightbox onscroll-fade-in">
           <article>
-            <a href="images/gallery/fulls/white_cliff.jpg" class="image">
-              <img src="images/gallery/fulls/white_cliff.jpg" alt="" />
+            <a href="images/gallery/fulls/white_cliff.PNG" class="image">
+              <img src="images/gallery/fulls/white_cliff.PNG" alt="" />
             </a>
             <div class="caption">
               <h3>White Cliff</h3>
