--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
             <b>Imperial College London</b>. I focus on experimental work with
             <b>semiconductor qubits</b> under the guidance of Dr. John
             Michniewicz. Simultaneously, I'm a remote intern at the
-            <b>Beijing Academy of Quantum Information Science (BAQIS)</b>, where
-            I work with Dr. Jingbo Wang on
+            <b
+              ><a href="http://en.baqis.ac.cn/"
+                >Beijing Academy of Quantum Information Science (BAQIS)</a
+              ></b
+            >, where I work with Dr. Jingbo Wang on
             <b>Rydberg atom quantum computing and compilation</b>.
           </p>
           <p class="major">
