--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             <b>Imperial College London</b>. I focus on experimental work with
             <b>semiconductor qubits</b> under the guidance of Dr. John
             Michniewicz. Simultaneously, I'm a remote intern at the
-            <b
-              ><a href="http://en.baqis.ac.cn/"
-                >Beijing Academy of Quantum Information Science (BAQIS)</a
-              ></b
+            <a href="http://en.baqis.ac.cn/"
+              ><b>Beijing Academy of Quantum Information Science (BAQIS)</b></a
             >, where I work with Dr. Jingbo Wang on
             <b>Rydberg atom quantum computing and compilation</b>.
           </p>
