--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         <!-- Gallery -->
         <div class="gallery style2 medium lightbox onscroll-fade-in">
           <article>
-            <a href="images/gallery/fulls/white_cliff.PNG" class="image">
-              <img src="images/gallery/fulls/white_cliff.PNG" alt="" />
+            <a href="images/gallery/fulls/white_cliff.JPG" class="image">
+              <img src="images/gallery/fulls/white_cliff.JPG" alt="" />
             </a>
             <div class="caption">
               <h3>White Cliff</h3>
