--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="gallery style2 medium lightbox onscroll-fade-in">
           <article>
             <a href="images/gallery/fulls/white_cliff.JPG" class="image">
-              <img src="images/gallery/thumbs/white_cliff.jpeg alt="" />
+              <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
             </a>
             <div class="caption">
               <h3>White Cliff</h3>
