--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
           <p>
             I enjoy traveling and capturing the beauty of the world through my
             journey. Here are some of my favorite photos from my adventures.
+            <a href="photography.html">Photography Gallery</a>
           </p>
         </div>
 
