--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="items style1 medium onscroll-fade-in">
             <section>
               <span class="icon style2 major fa-gem"></span>
-              <h3>[zh] Quantum Mechanics</h3>
+              <h3><a href="https://github.com/chenx820/HUST-course-notes/blob/main/%E9%87%8F%E5%AD%90%E5%8A%9B%E5%AD%A6/%5B%E9%87%8F%E5%AD%90%E5%8A%9B%E5%AD%A6%5D%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.pdf">Quantum Mechanics</a></h3>
               <p>
                 <div class="tags">
                   <span class="tag">Quantum Mechanics</span>
