--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               </p>
             </section>
           </div>
-          <p>HUST course notes</p>
+          <h3><a href="https://github.com/chenx820/HUST-course-notes/tree/main">HUST course notes</a></h3>
           <div class="items style1 medium onscroll-fade-in">
             <section>
               <span class="icon style2 major fa-gem"></span>
