--- a/index.html
+++ b/index.html
@@ -262,17 +262,25 @@
               </p>
             </section>
           </div>
-          <h3><a href="https://github.com/chenx820/HUST-course-notes/tree/main">HUST course notes</a></h3>
+          <h3>
+            <a href="https://github.com/chenx820/HUST-course-notes/tree/main"
+              >HUST course notes</a
+            >
+          </h3>
           <div class="items style1 medium onscroll-fade-in">
             <section>
               <span class="icon style2 major fa-gem"></span>
-              <h3><a href="docs/notes/[量子力学]学习笔记.pdf">Quantum Mechanics</a></h3>
+              <h3>Quantum Mechanics</h3>
               <p>
-                <div class="tags">
-                  <span class="tag">Quantum Mechanics</span>
-                  <span class="tag">ZH</span>
-                  <span class="tag">HUST</span>
-              </div>
+                <a href="docs/notes/[量子力学]学习笔记.pdf"
+                  >[zh] 量子力学学习笔记</a
+                >
+                <a href="docs/notes/[量子力学]期末偷分宝典.pdf"
+                  >[zh] 量子力学期末复习笔记</a
+                >
+                <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
+                  >[zh] 高等量子力学学习笔记</a
+                >
               </p>
             </section>
           </div>
