--- a/index.html
+++ b/index.html
@@ -283,6 +283,15 @@
                 >
               </p>
             </section>
+            <section>
+              <span class="icon style2 major fa-gem"></span>
+              <h3>Classical Mechanics</h3>
+              <p>
+                <a href="docs/notes/note-on-classical-mechanics.pdf"
+                  >[en] Classical Mechanics</a
+                >
+              </p>
+            </section>
           </div>
         </div>
       </section>
