--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
             laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
             pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.
           </p>
+          <h3>
+            <a href="https://github.com/chenx820/imperial-course-notes"
+              >Imperial course notes</a
+            >
+          </h3>
           <div class="items style1 medium onscroll-fade-in">
             <section>
               <span class="icon style2 major fa-gem"></span>
@@ -263,7 +268,7 @@
             </section>
           </div>
           <h3>
-            <a href="https://github.com/chenx820/HUST-course-notes/tree/main"
+            <a href="https://github.com/chenx820/HUST-course-notes"
               >HUST course notes</a
             >
           </h3>
