--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             </li>
           </ul>
           <p>
-            &copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.
+            &copy; 2024 Chen Huang. Design: <a href="https://html5up.net">HTML5 UP</a>.
           </p>
         </div>
       </footer>
