--- a/photography.html
+++ b/photography.html
@@ -1,47 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Photography Gallery</title>
-    <link rel="stylesheet" href="styles.css" />
-    <!-- 引入 CSS 文件（如果有的话） -->
-    <style>
-      /* 简单的 CSS 画廊样式 */
-      .gallery-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 15px;
-        justify-content: center;
-      }
-      .gallery-item {
-        width: 250px;
-        overflow: hidden;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      }
-      .gallery-item img {
-        width: 100%;
-        height: auto;
-        transition: transform 0.3s ease;
-      }
-      .gallery-item img:hover {
-        transform: scale(1.1); /* 放大效果 */
-      }
-      h1 {
-        text-align: center;
-        margin-top: 20px;
-      }
-    </style>
+    <title>Chen's Physics World</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="images/icon.png" type="image/png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
   </head>
   <body>
     <h1>My Photography Gallery</h1>
-    <div class="gallery-container">
-      <div class="gallery-item">
+      <div>
         <img src="images/gallery/fulls/white_cliff.JPG" alt="Photo 1" />
       </div>
       <!-- 添加更多图片 -->
-    </div>
     <a
       href="index.html"
       style="display: block; text-align: center; margin-top: 20px"
