--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Chen's Physics World</title>
+    <title>Chen's Physics World 黄晨的物理世界</title>
     <meta charset="utf-8" />
     <link rel="icon" href="images/icon.png" type="image/png" />
     <meta
@@ -223,7 +223,7 @@
       <!-- Six -->
       <section class="wrapper style1 align-center">
         <div class="inner">
-          <h2>Photography</h2>
+          <h2>Life is more than Physics</h2>
           <p>
             I enjoy traveling and capturing the beauty of the world through my
             journey. Here are some of my favorite photos from my adventures.
@@ -413,7 +413,6 @@
         </div>
       </section>
 
-
       <!-- Footer -->
       <footer class="wrapper style1 align-center">
         <div class="inner">
@@ -449,7 +448,8 @@
             </li>
           </ul>
           <p>
-            &copy; 2024 Chen Huang. Design: <a href="https://html5up.net">HTML5 UP</a>.
+            &copy; 2024 Chen Huang. Design:
+            <a href="https://html5up.net">HTML5 UP</a>.
           </p>
         </div>
       </footer>
