--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <a href="photography.html">Photography Gallery</a>
           </p>
         </div>
-
+        <h3>Photography</h3>
         <!-- Gallery -->
         <div class="gallery style2 medium lightbox onscroll-fade-in">
           <article>
@@ -260,157 +260,14 @@
               </ul>
             </div>
           </article>
-          <article>
-            <a href="images/gallery/fulls/03.jpg" class="image">
-              <img src="images/gallery/thumbs/03.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Magna Amet</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/04.jpg" class="image">
-              <img src="images/gallery/thumbs/04.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Sed Tempus</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/05.jpg" class="image">
-              <img src="images/gallery/thumbs/05.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Ultrices Magna</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/06.jpg" class="image">
-              <img src="images/gallery/thumbs/06.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Sed Tempus</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/07.jpg" class="image">
-              <img src="images/gallery/thumbs/07.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Ipsum Lorem</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/08.jpg" class="image">
-              <img src="images/gallery/thumbs/08.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Magna Risus</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/09.jpg" class="image">
-              <img src="images/gallery/thumbs/09.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Tempus Dolor</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/10.jpg" class="image">
-              <img src="images/gallery/thumbs/10.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Sed Etiam</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/11.jpg" class="image">
-              <img src="images/gallery/thumbs/11.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Magna Lorem</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/12.jpg" class="image">
-              <img src="images/gallery/thumbs/12.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Ipsum Dolor</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
         </div>
+        <h3>Content Creation</h3>
+        <p>
+          I am an active blogger on platforms like Weibo (20.4k followers) and
+          Zhihu (5k followers), where I share my thoughts on physics and life.
+          Here, I also create content focused on enhancing study efficiency and
+          personal growth.
+        </p>
       </section>
 
       <!-- Footer -->
