--- a/index.html
+++ b/index.html
@@ -229,45 +229,45 @@
             journey. Here are some of my favorite photos from my adventures.
             <a href="photography.html">Photography Gallery</a>
           </p>
+          <h3>Photography</h3>
+          <!-- Gallery -->
+          <div class="gallery style2 medium lightbox onscroll-fade-in">
+            <article>
+              <a href="photography.html" class="image">
+                <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
+              </a>
+              <div class="caption">
+                <h3>White Cliff</h3>
+                <p>Time</p>
+                <ul class="actions fixed">
+                  <li><span class="button small">Details</span></li>
+                </ul>
+              </div>
+            </article>
+            <article>
+              <a href="images/gallery/fulls/02.jpg" class="image">
+                <img src="images/gallery/thumbs/02.jpg" alt="" />
+              </a>
+              <div class="caption">
+                <h3>Feugiat Lorem</h3>
+                <p>
+                  Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam
+                  sed ultrices.
+                </p>
+                <ul class="actions fixed">
+                  <li><span class="button small">Details</span></li>
+                </ul>
+              </div>
+            </article>
+          </div>
+          <h3>Content Creation</h3>
+          <p>
+            I am an active blogger on platforms like Weibo (20.4k followers) and
+            Zhihu (5k followers), where I share my thoughts on physics and life.
+            Here, I also create content focused on enhancing study efficiency
+            and personal growth.
+          </p>
         </div>
-        <h3>Photography</h3>
-        <!-- Gallery -->
-        <div class="gallery style2 medium lightbox onscroll-fade-in">
-          <article>
-            <a href="photography.html" class="image">
-              <img src="images/gallery/thumbs/white_cliff.jpeg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>White Cliff</h3>
-              <p>Time</p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-          <article>
-            <a href="images/gallery/fulls/02.jpg" class="image">
-              <img src="images/gallery/thumbs/02.jpg" alt="" />
-            </a>
-            <div class="caption">
-              <h3>Feugiat Lorem</h3>
-              <p>
-                Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed
-                ultrices.
-              </p>
-              <ul class="actions fixed">
-                <li><span class="button small">Details</span></li>
-              </ul>
-            </div>
-          </article>
-        </div>
-        <h3>Content Creation</h3>
-        <p>
-          I am an active blogger on platforms like Weibo (20.4k followers) and
-          Zhihu (5k followers), where I share my thoughts on physics and life.
-          Here, I also create content focused on enhancing study efficiency and
-          personal growth.
-        </p>
       </section>
 
       <!-- Footer -->
