--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
       >
         <div class="content">
-          <h2>Pharetra etiam nulla</h2>
+          <h2>Trapped-ion quantum computing</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id
             ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis
