--- a/index.html
+++ b/index.html
@@ -25,6 +25,37 @@
       <section class="banner style1 content-align-center">
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
+            <ul class="icons">
+              <li>
+                <a href="#" class="icon brands style2 fa-twitter"
+                  ><span class="label">Twitter</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands style2 fa-facebook-f"
+                  ><span class="label">Facebook</span></a
+                >
+              </li>
+              <li>
+                <a href="#" class="icon brands style2 fa-instagram"
+                  ><span class="label">Instagram</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/chen-huang-820x/"
+                  class="icon brands style2 fa-linkedin-in"
+                  ><span class="label">LinkedIn</span></a
+                >
+              </li>
+              <li>
+                <a
+                  href="mailto:chen.huang23@imperial.ac.uk"
+                  class="icon style2 fa-envelope"
+                  ><span class="label">Email</span></a
+                >
+              </li>
+            </ul>
           <p class="major">
             👋 Hi, I'm Chen, a physics student at
             <b>Imperial College London</b>. I focus on experimental work with
