--- a/index.html
+++ b/index.html
@@ -25,37 +25,37 @@
       <section class="banner style1 content-align-center">
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
-            <ul class="icons">
-              <li>
-                <a href="#" class="icon brands style2 fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-instagram"
-                  ><span class="label">Instagram</span></a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://www.linkedin.com/in/chen-huang-820x/"
-                  class="icon brands style2 fa-linkedin-in"
-                  ><span class="label">LinkedIn</span></a
-                >
-              </li>
-              <li>
-                <a
-                  href="mailto:chen.huang23@imperial.ac.uk"
-                  class="icon style2 fa-envelope"
-                  ><span class="label">Email</span></a
-                >
-              </li>
-            </ul>
+          <ul class="icons">
+            <li>
+              <a href="#" class="icon brands style2 fa-twitter"
+                ><span class="label">Twitter</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="icon brands style2 fa-facebook-f"
+                ><span class="label">Facebook</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="icon brands style2 fa-instagram"
+                ><span class="label">Instagram</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/chen-huang-820x/"
+                class="icon brands style2 fa-linkedin-in"
+                ><span class="label">LinkedIn</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="mailto:chen.huang23@imperial.ac.uk"
+                class="icon style2 fa-envelope"
+                ><span class="label">Email</span></a
+              >
+            </li>
+          </ul>
           <p class="major">
             👋 Hi, I'm Chen, a physics student at
             <b>Imperial College London</b>. I focus on experimental work with
@@ -191,6 +191,15 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
                 dui turpis, cursus eget orci amet aliquam congue semper. Etiam
                 eget ultrices risus nec tempor elit.
+              </p>
+            </section>
+            <section>
+              <span class="icon style2 major fa-gem"></span>
+              <h3>Mathemetical Physics</h3>
+              <p>
+                <a href="docs/notes/[数学物理方程]课堂笔记.pdf"
+                  >[zh] 数学物理方程学习笔记</a
+                >
               </p>
             </section>
             <section>
