--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </section>
             <section>
               <span class="icon style2 major fa-gem"></span>
-              <h3>Mathemetical Physics</h3>
+              <h3>Mathemetical Methods in Physics</h3>
               <p>
                 <a href="docs/notes/[数学物理方程]课堂笔记.pdf"
                   >[zh] 数学物理方程学习笔记</a
