--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
                 >
               </p>
             </section>
+            <section>
+              <span class="icon style2 major fa-gem"></span>
+              <h3>Solid State Physics</h3>
+              <p>
+                <a href="docs/notes/[固体物理]期末复习笔记.pdf"
+                  >[zh] 固体物理期末复习笔记</a
+                >
           </div>
         </div>
       </section>
