--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Chen's Physics World 黄晨的物理世界</title>
+    <title>Chen's Physics World</title>
     <meta charset="utf-8" />
     <link rel="icon" href="images/icon.png" type="image/png" />
     <meta
