--- a/index.html
+++ b/index.html
@@ -58,9 +58,17 @@
           </ul>
           <p class="major">
             👋 Hi, I'm Chen, a physics student at
-            <b>Imperial College London</b>. I focus on experimental work with
+            <b>Imperial College London</b>. My given name is "晨" (Chen),
+            meaning "morning" in Chinese. I've always been a morning person,
+            drawn to the fresh air and peaceful start of each day.
+            Interestingly, "Chen" also sounds like "Cheng," which is the Chinese
+            pronunciation for "orange" (橙). Because of this, my friends
+            affectionately call me "橙子" (Chengzi) 🍊.
+          </p>
+          <p class="major">
+            At Imperial College London, I focus on experimental work with
             <b>semiconductor qubits</b> under the guidance of Dr. John
-            Michniewicz. Simultaneously, I'm a remote intern at the
+            Michniewicz. Additionally, I'm a remote intern at the
             <a href="http://en.baqis.ac.cn/"
               ><b>Beijing Academy of Quantum Information Science (BAQIS)</b></a
             >, where I work with Dr. Jingbo Wang on
@@ -69,22 +77,14 @@
           <p class="major">
             Theoretical research brings me the joy of creating new ideas, while
             experimental work excites me as I witness "physics happening in the
-            lab". I am deeply passionate about both aspects of my research and
+            lab." I am deeply passionate about both aspects of my research and
             enjoy the unique challenges and rewards each offers.
-          </p>
-          <p class="major">
-            My given name is "晨" (Chen), which means "morning" in Chinese. I've
-            always been a morning person, drawn to the fresh air and peaceful
-            start of each day. Interestingly, "Chen" also sounds like "Cheng",
-            which is the Chinese pronunciation for "orange" (橙). Because of
-            this, my friends affectionately call me "橙子" (Chengzi) 🍊.
           </p>
           <p class="major">
             I am passionate about exploring the fascinating realms of Quantum
             Computing and Quantum Information. Outside of academics, I enjoy
             photography, traveling, reading, app development, and learning new
-            things. I’m also a big fan of the Chinese singer and dancer XIN Liu,
-            whose artistry inspires me.
+            things.
           </p>
           <p class="major">
             I am currently seeking a PhD position in
@@ -251,6 +251,8 @@
                 <a href="docs/notes/[固体物理]期末复习笔记.pdf"
                   >[zh] 固体物理期末复习笔记</a
                 >
+              </p>
+            </section>
           </div>
         </div>
       </section>
