--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+  </nav>
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
