--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
+  </head>
+  <header class="header">
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
-  </nav>
-  </head>
+    </nav>
+  </header>
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
