--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </head>
   <header class="header">
     <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
+      <a href="#">Home</a>
+      <a href="#research">Research</a>
+      <a href="#notes">Notes</a>
     </nav>
   </header>
   <body class="is-preload">
@@ -116,7 +116,7 @@
       <!-- Two -->
       <section
         class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
-        id="first"
+        id="research"
       >
         <div class="content">
           <h2>Rydberg atom computing and compilation</h2>
@@ -181,7 +181,7 @@
       </section>
 
       <!-- Five -->
-      <section class="wrapper style1 align-center">
+      <section class="wrapper style1 align-center" id="notes">
         <div class="inner">
           <h2>Notes</h2>
           <p>
