--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- One -->
-      <section class="banner style2 content-align-center">
+      <section class="banner style5">
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <ul class="icons">
