--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
   </head>
+
   <header class="header">
     <nav>
       <a href="#">Home</a>
@@ -29,6 +30,22 @@
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
+      <!-- Header -->
+      <nav class="invert">
+        <ul>
+          <li>
+            <a href="#research" class="button navbar fit smooth-scroll-middle"
+              ><span class="label-nav">Research</span></a
+            >
+          </li>
+          <li>
+            <a href="#notes" class="button navbar fit smooth-scroll-middle"
+              >><span class="label-nav">Notes</span></a
+            >
+          </li>
+        </ul>
+      </nav>
+
       <!-- One -->
       <section class="banner style5">
         <div class="content">
