--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       <nav class="invert">
         <ul>
           <li>
+            <a href="#home" class="button navbar fit smooth-scroll-middle"
+              ><span class="label-nav">Home</span></a
+            >
+          </li>
+          <li>
             <a href="#research" class="button navbar fit smooth-scroll-middle"
               ><span class="label-nav">Research</span></a
             >
@@ -47,7 +52,7 @@
       </nav>
 
       <!-- One -->
-      <section class="banner style5">
+      <section class="banner style5" id="home">
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <ul class="icons">
