--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <ul>
           <li>
             <a href="#home" class="button navbar fit smooth-scroll-middle"
-              ><span class="label-nav">Home</span></a
+              ><span class="icon">Home</span></a
             >
           </li>
           <li>
             <a href="#research" class="button navbar fit smooth-scroll-middle"
-              ><span class="label-nav">Research</span></a
+              ><span class="icon">Research</span></a
             >
           </li>
           <li>
             <a href="#notes" class="button navbar fit smooth-scroll-middle"
-              >><span class="label-nav">Notes</span></a
+              >><span class="icon">Notes</span></a
             >
           </li>
         </ul>
