--- a/index-demo.html
+++ b/index-demo.html
@@ -24,7 +24,7 @@
     <div id="wrapper" class="divided">
       <!-- Banner -->
       <section
-        class="banner style5 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-down invert color0"
+        class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right"
       >
         <div class="content">
           <h1>Story</h1>
