--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Header -->
   <header class="header">
     <nav>
-      <a href="#">Home</a>
+      <a href="#home">Home</a>
       <a href="#research">Research</a>
       <a href="#notes">Notes</a>
     </nav>
