--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <!-- Header -->
   <header class="header">
     <nav>
-      <a href="#home">Home</a>
-      <a href="#research">Research</a>
-      <a href="#notes">Notes</a>
+      <a href="#home" class="button big wide smooth-scroll-middle">Home</a>
+      <a href="#research" class="button big wide smooth-scroll-middle">Research</a>
+      <a href="#notes" class="button big wide smooth-scroll-middle">Notes</a>
     </nav>
   </header>
 
@@ -108,11 +108,17 @@
 
           <ul class="actions stacked">
             <li>
-              <a href="#first" class="button big wide smooth-scroll-middle"
+              <a href="#research" class="button big wide smooth-scroll-middle"
                 >Get Started</a
               >
             </li>
           </ul>
+        </div>
+        <div class="image">
+          <img
+            src="images/meteor202308_compressed.jpg"
+            alt="meteor202308_compressed"
+          />
         </div>
       </section>
 
