--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <header class="header">
     <nav>
       <a href="#home" class="button big wide smooth-scroll-middle">Home</a>
-      <a href="#research" class="button big wide smooth-scroll-middle">Research</a>
+      <a href="#research" class="button big wide smooth-scroll-middle"
+        >Research</a
+      >
       <a href="#notes" class="button big wide smooth-scroll-middle">Notes</a>
     </nav>
   </header>
@@ -32,7 +34,10 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- One -->
-      <section class="banner style5" id="home">
+      <section
+        class="banner style5 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-down invert color0"
+        id="home"
+      >
         <div class="content">
           <h1>Chen Huang 黄晨</h1>
           <ul class="icons">
