--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
   <!-- Header -->
   <header class="header">
     <nav>
-      <a href="#home" class="button big wide smooth-scroll-middle">Home</a>
-      <a href="#research" class="button big wide smooth-scroll-middle"
-        >Research</a
-      >
-      <a href="#notes" class="button big wide smooth-scroll-middle">Notes</a>
+      <a href="#home" class="button big wide smooth-scroll">Home</a>
+      <a href="#research" class="button big wide smooth-scroll">Research</a>
+      <a href="#notes" class="button big wide smooth-scroll">Notes</a>
     </nav>
   </header>
 
