--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     /></noscript>
   </head>
 
-  <!-- Header -->
-  <header class="header">
-    <nav>
-      <a href="#home" class="button big wide smooth-scroll">Home</a>
-      <a href="#research" class="button big wide smooth-scroll">Research</a>
-      <a href="#notes" class="button big wide smooth-scroll">Notes</a>
-    </nav>
-  </header>
-
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
-      <!-- One -->
+      <!-- navigation bar -->
+			<nav class="invert">
+				<ul>
+					<li><a href="#home" class="button big wide smooth-scroll">Home</a></li>
+					<li><a href="#research" class="button big wide smooth-scroll">Research</a></li>
+					<li><a href="#notes" class="button big wide smooth-scroll">Notes</a></li>
+				</ul>
+			</nav>
+
+      <!-- Home -->
       <section
         class="banner style5 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-down invert color0"
         id="home"
