--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- navigation bar -->
-			<nav class="invert">
-				<ul>
-					<li><a href="#home" class="button big wide smooth-scroll">Home</a></li>
-					<li><a href="#research" class="button big wide smooth-scroll">Research</a></li>
-					<li><a href="#notes" class="button big wide smooth-scroll">Notes</a></li>
-				</ul>
-			</nav>
+      <nav class="action">
+        <ul>
+          <li><a href="#home" class="button smooth-scroll">Home</a></li>
+          <li><a href="#research" class="button smooth-scroll">Research</a></li>
+          <li><a href="#notes" class="button smooth-scroll">Notes</a></li>
+        </ul>
+      </nav>
 
       <!-- Home -->
       <section
