--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- navigation bar -->
-      <nav class="action">
+      <nav class="invert">
         <ul>
           <li><a href="#home" class="button smooth-scroll">Home</a></li>
           <li><a href="#research" class="button smooth-scroll">Research</a></li>
