--- a/index.html
+++ b/index.html
@@ -25,9 +25,21 @@
       <!-- navigation bar -->
       <nav class="invert">
         <ul>
-          <li><a href="#home" class="button smooth-scroll">Home</a></li>
-          <li><a href="#research" class="button smooth-scroll">Research</a></li>
-          <li><a href="#notes" class="button smooth-scroll">Notes</a></li>
+          <li>
+            <a href="#home" class="button smooth-scroll"
+              ><span class="label-nav">Home</span></a
+            >
+          </li>
+          <li>
+            <a href="#research" class="button smooth-scroll"
+              ><span class="label-nav">Research</span></a
+            >
+          </li>
+          <li>
+            <a href="#notes" class="button smooth-scroll"
+              ><span class="label-nav">Notes</span></a
+            >
+          </li>
         </ul>
       </nav>
 
