--- a/index.html
+++ b/index.html
@@ -130,10 +130,7 @@
           </ul>
         </div>
         <div class="image">
-          <img
-            src="images/meteor202308_compressed.jpg"
-            alt="meteor202308_compressed"
-          />
+          <img src="images/banner.jpg" />
         </div>
       </section>
 
