--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
       <nav class="invert">
         <ul>
           <li>
-            <a href="#home" class="button smooth-scroll"
+            <a href="#home" class="button navbar fit smooth-scroll"
               ><span class="label-nav">Home</span></a
             >
           </li>
           <li>
-            <a href="#research" class="button smooth-scroll"
+            <a href="#research" class="button navbar fit smooth-scroll"
               ><span class="label-nav">Research</span></a
             >
           </li>
           <li>
-            <a href="#notes" class="button smooth-scroll"
+            <a href="#notes" class="button navbar fit smooth-scroll"
               ><span class="label-nav">Notes</span></a
             >
           </li>
