--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- navigation bar -->
-      <nav class="invert show">
+      <nav class="invert">
         <ul>
           <li>
             <a href="#home" class="button navbar fit smooth-scroll"
