--- a/index.html
+++ b/index.html
@@ -19,30 +19,19 @@
     /></noscript>
   </head>
 
+  <!-- navigation bar -->
+  <header class="header">
+    <h1>My Website</h1>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#research">Research</a>
+      <a href="#notes">Notes</a>
+    </nav>
+  </header>
+
   <body class="is-preload">
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
-      <!-- navigation bar -->
-      <nav class="invert">
-        <ul>
-          <li>
-            <a href="#home" class="button navbar fit smooth-scroll"
-              ><span class="label-nav">Home</span></a
-            >
-          </li>
-          <li>
-            <a href="#research" class="button navbar fit smooth-scroll"
-              ><span class="label-nav">Research</span></a
-            >
-          </li>
-          <li>
-            <a href="#notes" class="button navbar fit smooth-scroll"
-              ><span class="label-nav">Notes</span></a
-            >
-          </li>
-        </ul>
-      </nav>
-
       <!-- Home -->
       <section
         class="banner style5 orient-right content-align-center image-position-center fullscreen onload-image-fade-in onload-content-fade-down invert color0"
