--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="#home">Home</a>
       <a href="#research">Research</a>
       <a href="#notes">Notes</a>
+      <a href="/docs/CV_ChenHuang.pdf">CV</a>
     </nav>
   </header>
 
