--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
       >
         <div class="content">
-          <h2>Tempus adipiscing</h2>
+          <h2>Charge noise in semiconductor qubits for quantum computing</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id
             ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis
