--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <!-- navigation bar -->
   <header class="header">
     <nav>
-      <a href="#home">Home</a>
-      <a href="#research">Research</a>
-      <a href="#notes">Notes</a>
+      <a href="#home" class="smooth-scroll">Home</a>
+      <a href="#research" class="smooth-scroll">Research</a>
+      <a href="#notes" class="smooth-scroll">Notes</a>
       <a href="/docs/CV_ChenHuang.pdf">CV</a>
     </nav>
   </header>
