--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <!-- navigation bar -->
       <header class="header">
         <nav>
-          <a href="#home" class="button smooth-scroll">Home</a>
-          <a href="#research" class="button smooth-scroll">Research</a>
-          <a href="#notes" class="button smooth-scroll">Notes</a>
+          <a href="#home" class="button small smooth-scroll">Home</a>
+          <a href="#research" class="button small smooth-scroll">Research</a>
+          <a href="#notes" class="button small smooth-scroll">Notes</a>
           <a href="/docs/CV_ChenHuang.pdf">CV</a>
         </nav>
       </header>
