--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- navigation bar -->
-      <class class="header">
+      <section class="header">
         <nav>
           <a href="#home" class="button small smooth-scroll">Home</a>
           <a href="#research" class="button small smooth-scroll">Research</a>
           <a href="#notes" class="button small smooth-scroll">Notes</a>
           <a href="/docs/CV_ChenHuang.pdf">CV</a>
         </nav>
-      </class>
+      </section>
 
       <!-- Home -->
       <section
