--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
         </div>
       </section>
 
-      <!-- Two -->
+      <!-- Research 1 -->
       <section
-        class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
+        class="spotlight style5 orient-right content-align-left image-position-center onscroll-image-fade-in"
         id="research"
       >
         <div class="content">
