--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Wrapper -->
     <div id="wrapper" class="divided">
       <!-- navigation bar -->
-      <section class="header">
+      <section class="header invert color0">
         <nav>
           <a href="#home" class="button small smooth-scroll">Home</a>
           <a href="#research" class="button small smooth-scroll">Research</a>
