--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
       <!-- navigation bar -->
       <section class="header invert color0">
         <nav>
-          <a href="#home" class="button fit small smooth-scroll">Home</a>
-          <a href="#research" class="button fit small smooth-scroll"
-            >Research</a
-          >
-          <a href="#notes" class="button fit small smooth-scroll">Notes</a>
+          <a href="#home" class="button small smooth-scroll">Home</a>
+          <a href="#research" class="button small smooth-scroll">Research</a>
+          <a href="#notes" class="button small smooth-scroll">Notes</a>
           <a href="/docs/CV_ChenHuang.pdf" class="button fit small">CV</a>
         </nav>
       </section>
