--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#home" class="button small smooth-scroll">Home</a>
           <a href="#research" class="button small smooth-scroll">Research</a>
           <a href="#notes" class="button small smooth-scroll">Notes</a>
-          <a href="/docs/CV_ChenHuang.pdf" class="button fit small">CV</a>
+          <a href="/docs/CV_ChenHuang.pdf" class="button small">CV</a>
         </nav>
       </section>
 
