--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         </div>
       </section>
 
-      <!-- Five -->
-      <section class="wrapper style1 align-center" id="notes">
+      <!-- Notes -->
+      <section class="wrapper style3 align-center" id="notes">
         <div class="inner">
           <h2>Notes</h2>
           <p>
