--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       <!-- Research 1 -->
       <section
-        class="spotlight style5 orient-right content-align-left image-position-center onscroll-image-fade-in"
+        class="spotlight style5 orient-right content-align-left image-position-center onscroll-image-fade-in invert color0"
         id="research"
       >
         <div class="content">
@@ -148,7 +148,7 @@
 
       <!-- Three -->
       <section
-        class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
+        class="spotlight style5 orient-left content-align-left image-position-center onscroll-image-fade-in invert color0"
       >
         <div class="content">
           <h2>Charge noise in semiconductor qubits for quantum computing</h2>
@@ -170,7 +170,7 @@
 
       <!-- Four -->
       <section
-        class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
+        class="spotlight style5 orient-right content-align-left image-position-center onscroll-image-fade-in invert color0"
       >
         <div class="content">
           <h2>Trapped-ion quantum computing</h2>
