--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <!-- Three -->
+      <!-- Research 2 -->
       <section
         class="spotlight style5 orient-left content-align-left image-position-center onscroll-image-fade-in invert color0"
       >
@@ -168,7 +168,7 @@
         </div>
       </section>
 
-      <!-- Four -->
+      <!-- Research 3 -->
       <section
         class="spotlight style5 orient-right content-align-left image-position-center onscroll-image-fade-in invert color0"
       >
@@ -191,7 +191,7 @@
       </section>
 
       <!-- Notes -->
-      <section class="wrapper style2 align-center" id="notes">
+      <section class="wrapper style2 align-center invert color0" id="notes">
         <div class="inner">
           <h2>Notes</h2>
           <p>
