--- a/index.html
+++ b/index.html
@@ -225,10 +225,7 @@
               <p>
                 <a href="docs/notes/[量子力学]学习笔记.pdf"
                   >[zh] 量子力学学习笔记</a
-                >
-              </p>
-              <p>
-                <a href="docs/notes/[量子力学]期末偷分宝典.pdf"
+                ><br><a href="docs/notes/[量子力学]期末偷分宝典.pdf"
                   >[zh] 量子力学期末复习笔记</a
                 >
               </p>
