--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
             pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.
           </p>
-          <div class="items style1 medium onscroll-fade-in">
+          <div class="items style3 medium onscroll-fade-in">
             <section>
               <span class="icon style2 major fa-gem"></span>
               <h3>Quantum Information</h3>
@@ -225,7 +225,7 @@
               <p>
                 <a href="docs/notes/[量子力学]学习笔记.pdf"
                   >[zh] 量子力学学习笔记</a
-                ><br><a href="docs/notes/[量子力学]期末偷分宝典.pdf"
+                ><br /><a href="docs/notes/[量子力学]期末偷分宝典.pdf"
                   >[zh] 量子力学期末复习笔记</a
                 >
               </p>
